--- a/views/yourProjectDetails.html
+++ b/views/yourProjectDetails.html
@@ -175,7 +175,7 @@
         var updates = {};
         var updates2 = {};
         var updates3 = {};
-
+        console.log(bidder)
         updates['/projects/' + projKey] = postData;
         updates2['/users/' + creator + '/projects/' + projKey] = postData;
         updates3['/users/' + bidder + '/worker/' + projKey] = postData;
