--- a/views/create.html
+++ b/views/create.html
@@ -23,7 +23,7 @@
         <textarea rows="5" cols="80" placeholder="Description" id="description"></textarea><br>
         <input type="text" class="register-input" id="category" placeholder="Category"><br>    
         <input type="text" class="register-input" id="location" placeholder="location"><br>
-        <input type="number" class="register-input" id="lowestBid" placeholder="lowestBid"><br>
+        <input type="number" class="register-input" id="highestbid" placeholder="Max Bid"><br>
         <p id="error"></p>
         <button type="button" onclick="create()" value="Create" class="register-button">Create</button>
     </form>
@@ -69,7 +69,7 @@
                 description:  document.getElementById("description").value,
                 category: document.getElementById("category").value,
                 location: document.getElementById("location").value,
-                lowestBid: document.getElementById("lowestBid").value,
+                highestbid: document.getElementById("highestbid").value,
                 creatorId:userId,
                 open:true
             };
