--- a/views/yourProjectDetails.html
+++ b/views/yourProjectDetails.html
@@ -40,11 +40,14 @@
     <h4> {{ service }} </h4>
     <p>{{ description }}</p>
     <p> ${{ highestbid }} </p>
+    <p> deadline {{ deadline }}</p>
 
     <a style="display:none" href="/profile" id="done"></a>
 
     <label> currentBids </label>
     <table id="bidsTable" border="1"><tr> <td>name</td> <td> value </td> <td> comments </td> <td> accept offer</td></table>
+
+    <label id="closed"> </label>
 </body>
 
 <script>
@@ -61,6 +64,8 @@
     var projKey = projKeyArray[0];
     var creator = "{{ creator }}";
     var creatorEmail = "";
+    var deadline = "{{ deadline }}"
+    console.log(deadline)
 
     var config = {
         apiKey: "AIzaSyBljIAXQPP9f9FJ9LTHuVlZJZkpajvmZj4",
@@ -69,6 +74,7 @@
         storageBucket: "yodelbackend.appspot.com",
         messagingSenderId: "609174959546"
     };
+
     var userId = "";
     firebase.initializeApp(config);
 
@@ -126,20 +132,20 @@
 
             // console.log(names.length)
             for (var x = 0; x < names.length; x++){
-            var table = document.getElementById("bidsTable");
-            var row = table.insertRow(-1);
-            var cell1 = row.insertCell(0);
-            var cell2 = row.insertCell(1);
-            var cell3 = row.insertCell(2);
-            var cell4 = row.insertCell(3);
-            
-            cell1.innerHTML = names[x]
-            cell2.innerHTML = bidValues[x]
-            cell3.innerHTML = comments[x]
+                var table = document.getElementById("bidsTable");
+                var row = table.insertRow(-1);
+                var cell1 = row.insertCell(0);
+                var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(2);
+                var cell4 = row.insertCell(3);
 
-            cell4.innerHTML = '<button id="accept" onclick="acceptBid(\'' + names[x] + ',' + bidValues[x] + ',' + userIds[x] + '\')" value="upvote">Accept</button></form>';
+                cell1.innerHTML = names[x]
+                cell2.innerHTML = bidValues[x]
+                cell3.innerHTML = comments[x]
 
-        }}, 2000)
+                cell4.innerHTML = '<button id="accept" onclick="acceptBid(\'' + names[x] + ',' + bidValues[x] + ',' + userIds[x] + '\')" value="upvote">Accept</button></form>';
+
+            }}, 2000)
     });
 
     function acceptBid(name2){
