--- a/views/profile.html
+++ b/views/profile.html
@@ -43,7 +43,11 @@
 	<table id="yourTable" border="1"></table>
 	<br><br>
 
-	<label> My Bids </label> <br>
+	<label> Pending Bids </label> <br>
+	<table id="pendingTable" border="1"> </table>
+	<br><br>
+
+	<label> Accepted Bids </label> <br>
 	<table id="hiredTable" border="1">
 	</table>
 	<br><br>
@@ -203,8 +207,48 @@
 								cell4.innerHTML = snapshot.val()[tempKey]["service"];
 								cell5.innerHTML = snapshot.val()[tempKey]["highestbid"]
 								cell6.innerHTML = snapshot.val()[tempKey]["description"]
-
 							}
+						}
+					});
+				});
+
+				var projKeys = [];
+				console.log(userId)
+				var query3 = firebase.database().ref("/users/" + userId + '/myBids').orderByKey();
+				query2.once("value")
+				.then(function(snapshot) {
+					snapshot.forEach(function(childSnapshot) {
+						var key = childSnapshot.key;
+						console.log(key)
+						projKeys.push(key);
+					});
+
+					firebase.database().ref('/users/' + userId + '/myBids').once('value').then(function(snapshot) {
+						for (var x=0; x < snapshot.numChildren(); x++){
+							tempKey = Object.keys(snapshot.val())[x]
+							var table = document.getElementById("pendingTable");
+
+							var row = table.insertRow(0);
+							var cell1 = row.insertCell(0);
+							var cell2 = row.insertCell(1);
+							var cell3 = row.insertCell(2);
+							var cell4 = row.insertCell(3);
+							var cell5 = row.insertCell(4);
+							var cell6 = row.insertCell(5);
+							var cell7 = row.insertCell(6);
+							var button = row.insertCell(7);
+
+							console.log(snapshot.val()[tempKey])
+
+							cell1.innerHTML = snapshot.val()[tempKey]["name"]
+							cell2.innerHTML = snapshot.val()[tempKey]["category"]
+							cell3.innerHTML = snapshot.val()[tempKey]["location"]
+							cell4.innerHTML = snapshot.val()[tempKey]["service"];
+							cell5.innerHTML = snapshot.val()[tempKey]["description"]
+       						cell6.innerHTML = snapshot.val()[tempKey]["bid"]
+        					cell7.innerHTML = snapshot.val()[tempKey]["comments"]
+
+							button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[tempKey]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[tempKey]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[tempKey]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[tempKey]["service"] + '"> <input type="text" style="display:none" name="highestbid" class="register-input" value="'+ snapshot.val()[tempKey]["highestbid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[tempKey]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + tempKey + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + tempKey + '"><input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[tempKey]["creatorId"] + '"> <input type="text" style="display:none" name="deadline" class="register-input" value = "' + snapshot.val()[tempKey]["deadline"] + '"> <button id="details" value="upvote">Details</button></form>';
 						}
 					});
 				});
@@ -286,7 +330,7 @@ query.once("value")
 
 	firebase.database().ref('/projects').once('value').then(function(snapshot) {
 		for (var x=0; x < snapshot.numChildren(); x++){
-			if(snapshot.val()[keys[x]]["open"] == true){
+			// if(snapshot.val()[keys[x]]["open"] == true){
 				var table = document.getElementById("projectsTable");
 
 				var row = table.insertRow(0);
@@ -308,7 +352,7 @@ query.once("value")
 				cell7.innerHTML = snapshot.val()[keys[x]]["deadline"]
 
 				button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[keys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[keys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[keys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[keys[x]]["service"] + '"> <input type="text" style="display:none" name="highestbid" class="register-input" value="'+ snapshot.val()[keys[x]]["highestbid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[keys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"><input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[keys[x]]["creatorId"] + '"> <input type="text" style="display:none" name="deadline" class="register-input" value = "' + snapshot.val()[keys[x]]["deadline"] + '"> <button id="details" value="upvote">Details</button></form>';
-			}
+			// }
 		}
 	})
 });
@@ -356,15 +400,13 @@ query.once("value")
         					var cell4 = row.insertCell(3);
         					var cell5 = row.insertCell(4);
         					var cell6 = row.insertCell(5);
-        					var button = row.insertCell(6);
 
         					cell1.innerHTML = snapshot.val()[keys[x]]["name"]
         					cell2.innerHTML = snapshot.val()[keys[x]]["category"]
         					cell3.innerHTML = snapshot.val()[keys[x]]["location"]
         					cell4.innerHTML = snapshot.val()[keys[x]]["service"];
-        					cell5.innerHTML = snapshot.val()[keys[x]]["highestbid"]
-        					cell6.innerHTML = snapshot.val()[keys[x]]["description"]
-        					button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[keys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[keys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[keys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[keys[x]]["service"] + '"> <input type="text" style="display:none" name="highestbid" class="register-input" value="'+ snapshot.val()[keys[x]]["highestbid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[keys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + userKeys[x] + '"> <input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[keys[x]]["creatorId"] + '"><button id="details" value="upvote">Details</button></form>';
+        					cell5.innerHTML = snapshot.val()[keys[x]]["description"]
+        					cell6.innerHTML = snapshot.val()[keys[x]]["deadline"]
         				}
         			}
         		});
